# crazyflie_mrac_ros

./: .gitignore  LICENSE
crazyflie_mrac/: CMakeLists.txt  package.xml
crazyflie_mrac/launch/: hovering_joystick.launch  hovering_waypoints.launch
crazyflie_mrac_controllers/: CMakeLists.txt  package.xml
crazyflie_mrac_controllers/include/: AdaptiveController.hpp  AdaptiveLaw.hpp  Controller.hpp  PID.hpp  ReferenceModel.hpp
crazyflie_mrac_controllers/src/: AdaptiveController.cpp  AdaptiveLaw.cpp  Controller.cpp  PID.cpp  ReferenceModel.cpp
crazyflie_mrac_controllers/test/: MatLabVerify_ReferenceModel.m  unittest_AdaptiveLaw.cpp  unittest_ReferenceModel.cpp
crazyflie_mrac_hover_controller/: CMakeLists.txt  package.xml
crazyflie_mrac_hover_controller/src/: main.cpp
crazyflie_mrac_tools/: CMakeLists.txt  package.xml
crazyflie_mrac_tools/launch/: attitude_joystick.launch  hovering_joystick.launch
crazyflie_mrac_waypoint_generator/: CMakeLists.txt  package.xml
crazyflie_mrac_waypoint_generator/scripts/: BasePlanner.py  JoystickPlanner.py  WaypointsPlanner.py  altitude_control.py  main_joystick.py  main_waypoints.py
crazyflie_mrac_waypoint_generator/scripts/jutils/: calculus.py  jmath.py  messages.py  topics.py
