<package>
  <name>crazyflie_mrac_hover_controller</name>
  <version>0.0.1</version>
  <description>Hover controller for Crazyflie</description>

  <maintainer email="snchan@ucdavis.edu">Sui Nam Chan</maintainer>

  <license>MIT</license>

  <author email="snchan@ucdavis.edu">Sui Nam Chan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>crazyflie_mrac_controllers</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>crazyflie_mrac_controllers</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
